infra/delivery/user-apps/base/nextjs/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextjs
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: nextjs
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nextjs
    spec:
      containers:
        - name: nextjs
          image: nextjs:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 20
            periodSeconds: 10
