infra/delivery/user-apps/base/nextjs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextjs
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: nextjs
  ports:
    - name: http
      port: 3000
      targetPort: http
